about us update

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -24,8 +24,8 @@
     Kenki Seki
   </div>
   <div style="margin-bottom: 100px;">
-    dammydammydammydammydammydammydammydammydammydammydammy<br>
-    dammydammydammydammydammydammydammydammydammydammydammydammydammydammy<br>
-    dammydammydammydammydammydammy
+    birth: September 28, 1995<br>
+    account: @seki_huruwanai<br>
+    Motto of motto: It's not funny if it's not foolish.
   </div>
 </div>
