--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,8 +42,7 @@
   <footer>
     <div class="text-center">
       <br>
-      <p style="margin: 30px 0px 10px;"><%= image_tag('twitter.png', :size => '24x24') %></p>
-      <div style="font-size:large; color: #ffffff"><%= link_to("About us", "/about") %></div>
+      <div style="margin: 10px 0px 10px; font-size:large; color: #ffffff"><%= link_to("About us", "/about") %></div>
     </div>
   <div id="copy_light">
     <p class="text-center"><small>Yuto Tachibana, Kenki Seki &copy; 2018</small></p>
