--- a/app/views/user/mypage.html.erb
+++ b/app/views/user/mypage.html.erb
@@ -24,13 +24,15 @@
     <p>まだあなたは労働スタンプを押していません。<br>
     スタンプを押して、労働のよろこびを共有しましょう！</p>
   <% end %>
+  <div>
+    <a href="https://twitter.com/share" class="twitter-share-button" data-text=
+    "<%= @current_user.count %>日目の労働を終えました。今日は<%= @work_msg %>。<%= @work_msg_sub %>
+    #incRude">tweet</a>
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  </div>
 </div>
 
 <div class="text-right">
-  <a href="https://twitter.com/share" class="twitter-share-button" data-text=
-  "<%= @current_user.count %>日目の労働を終えました。今日は<%= @work_msg %>。<%= @work_msg_sub %>
-#incRude">tweet</a>
-  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   <!-- 1.モーダルを表示する為のボタン -->
   <button class="btn btn-danger mypage_button" data-toggle="modal" data-target="#exampleModalCenter" style="margin-bottom: 40px;">
       労働日数をリセット
