--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -5,14 +5,14 @@
   dammydammydammydammydammydammy
 </p>
 <div class="text-center">
-  <%= image_tag('dummy.png', :size => '150x150') %>
+  <%= image_tag('tachibana.png', :class => "about_us_icon") %>
   <div style="font-size:x-large;">
     Yuto Tachibana
   </div>
   <div style="margin-bottom: 100px;">
-    dammydammydammydammydammydammydammydammydammydammydammy<br>
-    dammydammydammydammydammydammydammydammydammydammydammydammydammydammy<br>
-    dammydammydammydammydammydammy
+    某SIerで企画をやっています。<br>
+    好きなものはAlexaと暗号通貨<br>
+    Twitter: <a href="https://twitter.com/tachibanayu24">@tachibanayu24</a>
   </div>
 </div>
 
