--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -88,3 +88,10 @@ p.catchphrase_sub {
   background-color: #409ecc;
   color: #fff;
 }
+
+.about_us_icon {
+height: 150px;
+width: 150px;
+border-radius: 50%;
+
+}
