--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,15 +1,32 @@
-<h3 class="about_title text-center">About Us</h3>
-<p style="margin: 5px 0 30px;">
-  dammydammydammydammydammydammydammydammydammydammydammy<br>
-  dammydammydammydammydammydammydammydammydammydammydammydammydammydammy<br>
-  dammydammydammydammydammydammy
-</p>
+<p class="about_title text-center">About Us</p>
+<div class="container-fluid desctiption_parent">
+  <div class="row">
+    <div class="col-sm-1"></div>
+    <div class="col-sm-4">
+      <div class="catchphrase_main"><%= image_tag("incrudelogo.png", :class => "catchphrase_main") %></div>
+    </div>
+    <div class="col-sm-7">
+      <p style="padding: 10px;">
+        C言語のおまじないを<span style="font-family: osaka; background-color: #424242; font-weight: 100;">
+          <tt>
+            <span style="color: #FE2E64;">#incrude</span>
+          <span style="color:#F7D358;">&lt;stdio.h&gt;</span>
+        </tt>
+      </span>
+      と書いてしまうような初心者二人が3泊4日の<br>ハッカソン旅行で作ったWebアプリです。<br>
+      仕事に苦しむ人たちのストレスを少しでも軽減できればという思いで作りました。<br>
+      inc.(会社)に対してもっとRude(無遠慮)になって、人生を楽しみませんか？
+      </p>
+    </div>
+  </div>
+</div>
+
 <div class="text-center">
   <%= image_tag('tachibana.png', :class => "about_us_icon") %>
   <div style="font-size:x-large;">
     Yuto Tachibana
   </div>
-  <div style="margin-bottom: 100px;">
+  <div style="margin-bottom: 20px;">
     某SIerで企画をやっています。<br>
     好きなものはAlexaと暗号通貨<br>
     Twitter: <a href="https://twitter.com/tachibanayu24">@tachibanayu24</a>
@@ -19,13 +36,13 @@
 <div class="user-margin"></div>
 
 <div class="text-center">
-  <%= image_tag('dummy.png', :size => '150x150') %>
+  <%= image_tag('seki.png', :class => 'about_us_icon') %>
   <div style="font-size:x-large;">
     Kenki Seki
   </div>
   <div style="margin-bottom: 100px;">
-    birth: September 28, 1995<br>
-    account: @seki_huruwanai<br>
-    Motto of motto: It's not funny if it's not foolish.
+    大学院で光ネットワークの経路制御について研究してます。<br>
+    面白いことが好きです<br>
+    Twitter: <a href="https://twitter.com/seki_huruwanai">@seki_huruwanai<br>
   </div>
 </div>
