--- a/app/views/user/main.html.erb
+++ b/app/views/user/main.html.erb
@@ -1,4 +1,4 @@
-<h3 class="about_title text-center">労働スタンプを押す</h3>
+<p class="about_title text-center">労働スタンプを押す</p>
 <div class="stamp_description">
   <% if @current_user.count > 0 %>
     <span class="stamp_description_main">現在<strong><%= @current_user.count %>個</strong>の労働スタンプが押されています！</span><br>
