--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,15 +16,15 @@
 header {
   background-color: #fff;
   margin:0;
-  height: 80px
+  height: 50px
 }
 
 .logo {
-  margin: 10px 3px;
+  margin: auto 10px;
 }
 
 .page_button {
-  margin: 10px 3px;
+  margin: auto 3px;
 }
 
 .flash {
