--- a/app/views/user/mypage.html.erb
+++ b/app/views/user/mypage.html.erb
@@ -5,7 +5,7 @@
 <% end %>
 <div class="text-center">
     <!-- <h3 class="bg-info" style="padding: 5px;"><%= @current_user.name %></h3> -->
-    <h3 class="about_title"><%= @current_user.name %></h3>
+    <p class="about_title"><%= @current_user.name %></p>
     <img src= "<%= @current_user.image %>" class="user_img" width="100" height="100">
     <div class="twitter_id text-center">
       <p>@<%= @current_user.twitter_id %></p>
@@ -26,8 +26,8 @@
   <% end %>
   <div>
     <a href="https://twitter.com/share" class="twitter-share-button" data-text=
-    "<%= @current_user.count %>日目の労働を終えました。今日は<%= @work_msg %>。<%= @work_msg_sub %>
-    #incRude">tweet</a>
+    "<%= @current_user.name %>は<%= @current_user.count %>日間労働しています。今日は<%= @work_msg %>。<%= @work_msg_sub %>
+#incRude">tweet</a>
     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   </div>
 </div>
