remove flat-ui.css

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -43,6 +43,7 @@
   <div style="margin-bottom: 100px;">
     大学院で光ネットワークの経路制御について研究してます。<br>
     面白いことが好きです<br>
-    Twitter: <a href="https://twitter.com/seki_huruwanai">@seki_huruwanai<br>
+    Twitter: <a href="https://twitter.com/seki_huruwanai">@seki_huruwanai</a><br>
   </div>
+  <p style="margin: 30px; font-size: 14px;">お問い合わせは上記のTwitterまでお願いします。</p>
 </div>
