--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-
+<% @page_title = "TOP" %>
 <!-- キャッチフレーズはじめ -->
 <div class="catchphrase">
   <% if flash[:notice] %>
@@ -38,7 +38,8 @@
   </div>
 </div>
 <!-- 使いかた終わり -->
-<%= link_to("開発用 テストアカウントでのログインはこちら", "sessions/testCreate") %>
+
+<!-- <%= link_to("開発用 テストアカウントでのログインはこちら", "sessions/testCreate") %> -->
 
 <!-- 累計カウント始まり -->
 <div class="container-fluid destroy_parent">
