--- a/app/views/user/main.html.erb
+++ b/app/views/user/main.html.erb
@@ -1,3 +1,4 @@
+<% @page_title = "スタンプを押す" %>
 <p class="about_title text-center">労働スタンプを押す</p>
 <div class="stamp_description">
   <% if @current_user.count > 0 %>
