--- a/app/views/user/mypage.html.erb
+++ b/app/views/user/mypage.html.erb
@@ -1,3 +1,4 @@
+<% @page_title = "mypage" %>
 <% if flash[:notice] %>
   <div class="notice lead text-center flash" style="font-size: small;">
     <%= flash[:notice]%>
