--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -46,7 +46,7 @@
   display: block;
   width: 100%;
   height: 100%;
-  background-image:url(stamp.png);
+  background-image:url(images/stamp.png);
   background-repeat: no-repeat;
   text-indent: -10000px;
   list-style:none;
@@ -57,7 +57,7 @@
   display: block;
   width: 100%;
   height: 100%;
-  background-image:url(stamp_hover.png);
+  background-image:url(images/stamp_hover.png);
   background-repeat: no-repeat;
   text-indent: -10000px;
   list-style: none;
